force-app/main/default/objects/VOCComment__c/VOCComment__c.object-meta.xml
<CustomObject>
    <description>조치이력</description>
    <label>VOC 조치 이력</label>
    <nameField>
        <displayFormat>VoCM-{00000}</displayFormat>
        <label>VOC Comment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>