force-app/main/default/objects/VOCComment__c/fields/ActionDetailCode__c.field-meta.xml
<CustomField>
    <fullName>ActionDetailCode__c</fullName>
    <label>Action Details</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>99</fullName>
                <label>해당사항없음</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>방문</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>직송의뢰</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>현물회수</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>진행문의</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>유선상담</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>현장대응</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>080이관</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>