force-app/main/default/objects/VOCComment__c/fields/CustomerSideResponder__c.field-meta.xml
<CustomField>
    <fullName>CustomerSideResponder__c</fullName>
    <description>고객측대응자</description>
    <label>Customer Side Responder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>