force-app/main/default/objects/VOCComment__c/fields/DateofAction__c.field-meta.xml
<CustomField>
    <fullName>DateofAction__c</fullName>
    <description>조치일시</description>
    <label>Date of Action</label>
    <type>DateTime</type>
</CustomField>