force-app/main/default/objects/VOCComment__c/fields/IsPartnerDisclosure__c.field-meta.xml
<CustomField>
    <fullName>IsPartnerDisclosure__c</fullName>
    <defaultValue>false</defaultValue>
    <description>협력사공개</description>
    <label>Is Partner Disclosure?</label>
    <type>Checkbox</type>
</CustomField>