force-app/main/default/objects/VOCComment__c/fields/PRS_BD_NO__c.field-meta.xml
<CustomField>
    <fullName>PRS_BD_NO__c</fullName>
    <externalId>true</externalId>
    <label>PRS_BD_NO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>