force-app/main/default/objects/VOCComment__c/fields/RegDT__c.field-meta.xml
<CustomField>
    <fullName>RegDT__c</fullName>
    <label>RegDT</label>
    <type>DateTime</type>
</CustomField>