force-app/main/default/objects/VOCComment__c/fields/ResolverName__c.field-meta.xml
<CustomField>
    <fullName>ResolverName__c</fullName>
    <description>조치자명</description>
    <label>Resolver Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>