force-app/main/default/objects/VOCComment__c/fields/ResolverNumber__c.field-meta.xml
<CustomField>
    <fullName>ResolverNumber__c</fullName>
    <description>조치자 번호</description>
    <label>Resolver Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>