force-app/main/default/objects/VOCComment__c/fields/SolutionCode__c.field-meta.xml
<CustomField>
    <fullName>SolutionCode__c</fullName>
    <description>방법</description>
    <label>Solution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>99</fullName>
                <label>해당사항없음</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>Inbound Call</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Out Call</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>방문</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>