force-app/main/default/objects/VOCComment__c/fields/SolutionNumber__c.field-meta.xml
<CustomField>
    <fullName>SolutionNumber__c</fullName>
    <label>SolutionNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>