force-app/main/default/objects/VOCComment__c/fields/UpdDT__c.field-meta.xml
<CustomField>
    <fullName>UpdDT__c</fullName>
    <label>UpdDT</label>
    <type>DateTime</type>
</CustomField>