force-app/main/default/objects/VOCComment__c/fields/VOC__c.field-meta.xml
<CustomField>
    <fullName>VOC__c</fullName>
    <label>VOC</label>
    <referenceTo>VOC__c</referenceTo>
    <relationshipLabel>VOC Comments</relationshipLabel>
    <relationshipName>VOCComments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>