force-app/main/default/objects/VOCComment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>IsPartnerDisclosure__c</columns>
    <columns>ResolverName__c</columns>
    <columns>CustomerSideResponder__c</columns>
    <columns>DateofAction__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>SolutionCode__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>